automatically backed up by learn

--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -4,6 +4,9 @@
   <%= f.label :title %>
   <%= f.text_field :title %>
   <br />
+  <%= f.label :artist_name %>
+  <%= f.text_field :artist_name %>
+  <br />
 
   <%= f.submit %>
 <% end %>
