--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -8,7 +8,7 @@
   <%= f.text_field :artist_name %>
   <br />
   <%= f.label 'Choose a Genre:' %>
-  <%= f.collection_select :genre_id, Genre.all, :name, :name %>
+  <%= f.collection_select :genre_id, Genre.all, :id, :name %>
   <br>
   <input name="category[post_ids][]">
   <%= f.submit %>
