--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,4 +1,23 @@
+
 <h1>Create a Song</h1>
+
+<%= form_for @song  do |f| %>
+  <%= f.label :title %><br>
+  <%= f.text_field :title %><br>
+  <%= f.label :artist_name %><br>
+  <%= f.text_field :artist_name %><br>
+  <%= f.label :genre_name %><br>
+  <%= f.collection_select :genre_id, Genre.all, :id, :name %><br>
+  <%= f.label :note_contents %><br>
+  <input name='song[note_contents][]' id='song_notes_1'>
+  <input name='song[note_contents][]' id='song_notes_2'>
+  <input name='song[note_contents][]' id='song_notes_3'>
+  <br />
+
+  <%= f.submit %>
+<% end %>
+
+<!-- <h1>Create a Song</h1>
 
 <%= form_for @song  do |f| %>
   <%= f.label 'Song Title:' %>
@@ -15,4 +34,4 @@
   <input name='song[note_contents][]' id='song_notes_3'>
   <br />
   <%= f.submit %>
-<% end %>
+<% end %> -->
