--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,19 +1,13 @@
-
 <h1>Create a Song</h1>
 
-<%= form_for @song  do |f| %>
-  <%= f.label :title %><br>
-  <%= f.text_field :title %><br>
-  <%= f.label :artist_name %><br>
-  <%= f.text_field :artist_name %><br>
-  <%= f.label :genre_name %><br>
-  <%= f.collection_select :genre_id, Genre.all, :id, :name %><br>
-  <%= f.label :note_contents %><br>
-  <input name='song[note_contents][]' id='song_notes_1'>
-  <input name='song[note_contents][]' id='song_notes_2'>
-  <input name='song[note_contents][]' id='song_notes_3'>
+<%= form_for(@song) do |f| %>
+  <p>Title: <%= f.text_field :title %></p>
+  <p>Artist: <%= f.text_field :artist_name %></p>
+  <p>Choose a Genre: <%= f.select(:genre_name, @names, {}, :id => "song_genre_id")%></p>
+  <p>Optional Notes:</p>
+  <input type="text" name="song[note_contents][]" id="song_notes_1">
+  <input type="text" name="song[note_contents][]" id="song_notes_2">
   <br />
-
   <%= f.submit %>
 <% end %>
 
