--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -8,7 +8,7 @@
   <%= f.text_field :artist_name %>
   <br />
   <%= f.label 'Choose a Genre:' %>
-  <%= f.collection_select :genre_id, Genre.all, :id, :name %><br>
+  <%= f.collection_select :genre_name, Genre.all, :genre_name, :name %><br>
   <%= f.label :note_contents %><br>
   <input name='song[note_contents][]' id='song_notes_1'>
   <input name='song[note_contents][]' id='song_notes_2'>
